[gd_scene load_steps=7 format=3 uid="uid://b4k0gmi0kq2da"]

[ext_resource type="Script" path="res://scenes/components/move_component/move_component.gd" id="1_033tt"]
[ext_resource type="Script" path="res://scenes/game_objects/enemies/basic_enemy.gd" id="1_oif87"]
[ext_resource type="Script" path="res://scenes/components/health_component/health_component.gd" id="2_hlmxa"]
[ext_resource type="Script" path="res://scenes/components/scale_component/scale_component.gd" id="2_j7tvd"]
[ext_resource type="Script" path="res://scenes/components/hurtbox_component/hurtbox_component.gd" id="5_6untt"]
[ext_resource type="Script" path="res://scenes/components/shake_component/shake_component.gd" id="5_ig64b"]

[node name="BasicEnemy" type="Node2D"]
script = ExtResource("1_oif87")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_hlmxa")

[node name="MoveCompenent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_033tt")
actor = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_j7tvd")
actor = NodePath("../AnimatedSprite2D")
target_scale = Vector2(1.35, 1.35)

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("sprite", "hurtbox_component", "scale_component")]
script = ExtResource("5_ig64b")
sprite = NodePath("../AnimatedSprite2D")
hurtbox_component = NodePath("../HurtboxComponent")
scale_component = NodePath("../ScaleComponent")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_6untt")
health_component = NodePath("../HealthComponent")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
